samples/_failures_safe/1761337071_d09594_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2007621.c: In function ‘main’:
./samples/SAFE/__tmp_d2007621.c:179:5: error: expected declaration or statement at end of input
  179 |     }
      |     ^
